tests/invalid/special_methods.ri
struct SpecialMethod {
    func __xxx__() {}

    pub func __public__(self) {
        _ = self;
    }

    #[inline]
    func __ann__(self) {
        _ = self;
    }
}

func main() {}
