tests/invalid/special_methods.out
tests/invalid/special_methods.ri:2:5: error: this special function should be a method
    2 |     func __xxx__() {}
      |     ^~~~~~~~~~~~~~~~~
tests/invalid/special_methods.ri:4:9-6:5: error: special methods cannot be public
      |         /~~ from here
    4 |     pub func __public__(self) {
    5 |         _ = self;
    6 |     }
      |     ^~~ to here
tests/invalid/special_methods.ri:9:5-11:5: error: special methods cannot have attributes
      |     /~~ from here
    9 |     func __ann__(self) {
   10 |         _ = self;
   11 |     }
      |     ^~~ to here
rivet: error: could not compile module `special_methods`, aborting due to 3 previous errors